# simpleMaze

./: .gitignore  CMakeLists.txt  README.md
include/: Direction.hpp  Game.hpp  MazeBlock.hpp  Vignette.hpp  player.hpp
src/: Game.cpp  Vignette.cpp  main.cpp  player.cpp
